--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.77.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -50,13 +49,20 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.7.0",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.3",
-    "globals": "^15.7.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.4",
+    "globals": "^15.8.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
-    "typescript-eslint": "^7.14.1"
+    "react-scripts": "^5.0.1",
+    "typescript-eslint": "^7.16.0"
   }
 }
