--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.24.0",
     "sass": "^1.77.6",
     "typescript": "^4.9.5",
+    "typescript-cookie": "^1.0.6",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.4"
   },
