--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["kakao.maps.d.ts"],
+    "types": ["kakao.maps.d.ts"]
   },
   "include": ["src", "global.d.ts", "svg.d.ts"]
 }
