--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.0",
     "sass": "^1.77.6",
+    "tsid-ts": "^0.0.9",
     "typescript": "^4.9.5",
     "typescript-cookie": "^1.0.6",
     "web-vitals": "^2.1.4",
+    "yorkie-js-sdk": "^0.4.28",
     "zustand": "^4.5.4"
   },
   "scripts": {
